--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -12,6 +12,13 @@ services:
     expose:
       - 8080
 
+  redis:
+    image: redis
+    container_name: redis
+    hostname: localhost
+    ports:
+      - "6379:6379"
+
   nginx:
     depends_on:
       - popcornmate-server
