--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -49,7 +49,7 @@ jobs:
           username: ubuntu
           key: ${{ secrets.EC2_DEV_KEY }}
           script: |
-            cd Youngduck-Server
+            cd /home/ubuntu/
             
             sudo touch .env
             echo "${{ secrets.ENV }}" | sudo tee .env > /dev/null
