--- a/Infra/src/main/resources/application-infra.yml
+++ b/Infra/src/main/resources/application-infra.yml
@@ -16,6 +16,6 @@ spring:
 
   data:
     redis:
-      host: ${REDIS_HOST:localhost}
+      host: ${REDIS_HOST}
       port: ${REDIS_PORT:6379}
 ---
