--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -15,7 +15,7 @@ services:
   redis:
     image: redis
     container_name: redis
-    hostname: localhost
+    hostname: redis
     ports:
       - "6379:6379"
 
