--- a/Domain/src/main/resources/application-domain.yml
+++ b/Domain/src/main/resources/application-domain.yml
@@ -37,8 +37,8 @@ spring:
       on-profile: dev
 
   datasource:
+    url: jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${DB_NAME}?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true&tinyInt1is
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${DB_NAME}
     username: ${MYSQL_USERNAME}
     password: ${MYSQL_PASSWORD}
 
