--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,12 +3,14 @@ server {
     server_name *.compute.amazonaws.com;
 
     autoindex_localtime on;
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
 
     location /api {
         proxy_pass http://server:8080;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_set_header X-Real_IP $remote_addr;
-        proxy_redirect off;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
