--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,10 +4,11 @@ server {
 
     autoindex_localtime on;
 
-    location /api {
-        proxy_pass http://server:8080;
+    location /api/ {
+        proxy_pass http://server:8080/;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Prefix '/spi';
         proxy_set_header X-Real_IP $remote_addr;
         proxy_redirect off;
     }
