fix: swagger 추가

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -12,4 +12,11 @@ server {
         proxy_set_header X-Real_IP $remote_addr;
         proxy_redirect off;
     }
+
+    location /api/swagger-ui {
+        proxy_pass http://server:8080/api/swagger-ui;
+    }
+    location /api/swagger-resources {
+        proxy_pass http://server:8080/api/swagger-resources;
+    }
 }
