--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,11 +4,10 @@ server {
 
     autoindex_localtime on;
 
-    location /api/ {
-        proxy_pass http://server:8080/api;
+    location /api {
+        proxy_pass http://server:8080;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-Prefix '/api';
         proxy_set_header X-Real_IP $remote_addr;
         proxy_redirect off;
     }
