feat:oidc kakao #3

--- a/Infra/build.gradle
+++ b/Infra/build.gradle
@@ -6,8 +6,9 @@ dependencies {
     api 'org.springframework.boot:spring-boot-starter-data-redis'
     api 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.redisson:redisson:3.19.0'
-    implementation 'io.github.openfeign:feign-httpclient:12.1'
-    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.4'
+    implementation('io.github.openfeign:feign-jackson:12.1')
+    /* Feign client */
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.0'
     implementation 'com.amazonaws:aws-java-sdk-s3control:1.12.372'
     implementation 'com.nimbusds:nimbus-jose-jwt:3.10'
     implementation "com.slack.api:slack-api-client:1.28.0"
