fix:deploy https변경

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name *.compute.amazonaws.com;
+    server_name popcornmate.p-e.kr;
 
     autoindex_localtime on;
 
