--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,6 +3,7 @@ server {
     server_name popcornmate.p-e.kr;
 
     autoindex_localtime on;
+    listen 443 ssl;
 
     location /api {
         proxy_pass http://server:8080;
