--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,6 +4,10 @@ server {
 
     autoindex_localtime on;
 
+    if ($http_x_forwarded_proto != 'https') {
+       return 301 https://$host$request_uri;
+    }
+
     location /api {
         proxy_pass http://server:8080;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
