--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,12 +1,11 @@
 server {
     listen 80;
-    server_name popcornmate.p-e.kr;
+    server_name *.amazonaws.com;
 
     autoindex_localtime on;
 
-    if ($http_x_forwarded_proto != 'https') {
-       return 301 https://$host$request_uri;
-    }
+
+    error_log /var/log/nginx/error.log;
 
     location /api {
         proxy_pass http://server:8080;
