--- a/Infra/src/main/resources/application-infra.yml
+++ b/Infra/src/main/resources/application-infra.yml
@@ -8,6 +8,19 @@ spring:
     redis:
       host: localhost
       port: 6379
+cloud:
+  aws:
+    s3:
+      bucket: popcornmate
+    credentials:
+      access-key: ${S3_ACCESS}
+      secret-key: ${S3_SECRET}
+    region:
+      static: ap-northeast-2
+      auto: false
+    stack:
+      auto: false
+
 ---
 spring:
   config:
@@ -19,16 +32,16 @@ spring:
       host: ${REDIS_HOST}
       port: ${REDIS_PORT:6379}
 
-#cloud:
-#  aws:
-#    s3:
-#      bucket:
-#    credentials:
-#      access-key:
-#      secret-key:
-#    region:
-#      static: ap-northeast-2
-#      auto: false
-#    stack:
-#      auto: false
+cloud:
+  aws:
+    s3:
+      bucket: popcornmate
+    credentials:
+      access-key: ${S3_ACCESS}
+      secret-key: ${S3_SECRET}
+    region:
+      static: ap-northeast-2
+      auto: false
+    stack:
+      auto: false
 ---
