fix: user entity level 반영안되는 문제 #3

--- a/Domain/src/main/resources/application-domain.yml
+++ b/Domain/src/main/resources/application-domain.yml
@@ -7,7 +7,7 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/youngducklocal
+    url: jdbc:mysql://localhost:3306/youngduck
     username: root
     password: root
 
