feat: apple login 1차 구현 기본 세팅만 테스트X

--- a/Core/src/main/resources/application-core.yml
+++ b/Core/src/main/resources/application-core.yml
@@ -16,12 +16,12 @@ oauth:
     web-client-id: ${KAKAO_WEB_CLIENT}
     web-app-id: ${KAKAO_WEB_APP_ID}
 
-#  apple:
-#    baseUrl: ${APPLE_BASE_URL}
-#    clientId: ${APPLE_CLIENT_ID}
-#    webClientId: ${APPLE_WEB_CLIENT_ID}
-#    keyId: ${APPLE_KEY_ID}
-#    redirectUrl: ${APPLE_REDIRECT}
-#    teamId: ${APPLE_TEAM_ID}
-#    webCallbackUrl: ${APPLE_WEB_CALLBACK}
-#    authKey: ${APPLE_AUTH_KEY}
+  apple:
+    baseUrl: ${APPLE_BASE_URL}
+    clientId: ${APPLE_CLIENT_ID}
+    webClientId: ${APPLE_WEB_CLIENT_ID}
+    keyId: ${APPLE_KEY_ID}
+    redirectUrl: ${APPLE_REDIRECT}
+    teamId: ${APPLE_TEAM_ID}
+    webCallbackUrl: ${APPLE_WEB_CALLBACK}
+    authKey: ${APPLE_AUTH_KEY}
