--- a/Domain/src/main/resources/application-domain.yml
+++ b/Domain/src/main/resources/application-domain.yml
@@ -7,7 +7,7 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/youngduck
+    url: jdbc:mysql://localhost:3306/youngducktest
     username: root
     password: root
 
