fix: s3 bucket이름 수정

--- a/Infra/src/main/resources/application-infra.yml
+++ b/Infra/src/main/resources/application-infra.yml
@@ -11,7 +11,7 @@ spring:
 cloud:
   aws:
     s3:
-      bucket: popcornmate
+      bucket: popcornmate-bucket
     credentials:
       access-key: ${S3_ACCESS}
       secret-key: ${S3_SECRET}
@@ -35,7 +35,7 @@ spring:
 cloud:
   aws:
     s3:
-      bucket: popcornmate
+      bucket: popcornmate-bucket
     credentials:
       access-key: ${S3_ACCESS}
       secret-key: ${S3_SECRET}
