feat: fcm 초기 설정 #18

--- a/.gitignore
+++ b/.gitignore
@@ -39,4 +39,4 @@ out/
 .env
 
 Domain/src/main/generated/**/*.java
-
+Infra/src/main/resources/popcornmate-d7ca1-firebase-adminsdk-svbpw-fce737e873.json
