fix: screening 리뷰 특정값 마다 수 증가

--- a/Domain/src/main/resources/application-domain.yml
+++ b/Domain/src/main/resources/application-domain.yml
@@ -7,7 +7,7 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/youngducktest
+    url: jdbc:mysql://localhost:3306/youngduckt
     username: root
     password: root
 
