--- a/Infra/build.gradle
+++ b/Infra/build.gradle
@@ -19,10 +19,15 @@ dependencies {
     api project(':Core')
 }
 
-processResources.dependsOn('copySecret')
+subprojects {
 
-tasks.register('copySecret', Copy) {
-    from '../popcornmate-config' // 서브 모듈 디렉토리 경로
-    include "*"  // 설정 파일 복사
-    into './src/main/resources'  // 붙여넣을 위치
+    sourceSets {
+        main {
+            resources {
+                srcDirs += [
+                        "$rootDir/popcornmate-config"
+                ]
+            }
+        }
+    }
 }
