--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,8 @@ subprojects {
 		testAnnotationProcessor 'org.projectlombok:lombok'
 		/* fcm */
 		implementation 'com.google.firebase:firebase-admin:9.2.0'
+
+		implementation 'com.squareup.okhttp3:okhttp:4.9.0'
 	}
 
 	repositories {
