--- a/Core/src/main/resources/application-core.yml
+++ b/Core/src/main/resources/application-core.yml
@@ -3,7 +3,7 @@ auth:
   jwt:
     secret-key: ${JWT_SECRET_KEY}
     access-exp: ${JWT_ACCESS_EXP:3600}
-    refresh-exp: ${JWT_REFRESH_EXP}
+    refresh-exp: ${JWT_REFRESH_TOKEN_EXP}
 
 oauth:
   kakao:
