--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -52,6 +52,11 @@ jobs:
             sudo touch .env
             echo "${{ secrets.ENV }}" | sudo tee .env > /dev/null
             
+            cd Infra/src/main/resources
+            sudo touch popcornmate-d7ca1-firebase-adminsdk-svbpw-fce737e873.json
+            echo "${{ secrets.FCM_SECRET }}" | sed 's/#/"/g' > ./popcornmate-d7ca1-firebase-adminsdk-svbpw-fce737e873.json
+            sudo tee ./popcornmate-d7ca1-firebase-adminsdk-svbpw-fce737e873.json > /dev/null
+            
             docker stop $(docker ps -a -q)
             docker rm $(docker ps -a -q)
             docker rmi $(docker images -q)
