--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,6 +34,16 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew :Api:build
 
+      - name: 환경 변수를 세팅합니다.
+        run: |
+          cd ./Infra/src/main/resources
+          touch ./popcornmate-d7ca1-firebase-adminsdk-svbpw-fce737e873.json
+          echo "$FIREBASE_JSON" > ./popcornmate-d7ca1-firebase-adminsdk-svbpw-fce737e873.json
+          sed -i 's/#/"/g' ./popcornmate-d7ca1-firebase-adminsdk-svbpw-fce737e873.json
+        env:
+          FIREBASE_JSON: ${{ secrets.FCM_SECRET }}
+        shell: bash
+
       - name: Docker build
         run: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
@@ -52,11 +62,6 @@ jobs:
             sudo touch .env
             echo "${{ secrets.ENV }}" | sudo tee .env > /dev/null
 
-            cd Infra/src/main/resources
-            sudo touch popcornmate-d7ca1-firebase-adminsdk-svbpw-fce737e873.json
-            echo "${{ secrets.FCM_SECRET }}" | sed 's/#/"/g' > ./popcornmate-d7ca1-firebase-adminsdk-svbpw-fce737e873.json
-            sudo tee ./popcornmate-d7ca1-firebase-adminsdk-svbpw-fce737e873.json > /dev/null <<< ""
-            
             docker stop $(docker ps -a -q)
             docker rm $(docker ps -a -q)
             docker rmi $(docker images -q)
