--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,15 +34,6 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew :Api:build
 
-      - name: 환경 변수를 세팅합니다.
-        run: |
-          cd ./Infra/src/main/resources
-          touch ./popcornmate-d7ca1-firebase-adminsdk-svbpw-fce737e873.json
-          echo "$FIREBASE_JSON" > ./popcornmate-d7ca1-firebase-adminsdk-svbpw-fce737e873.json
-        env:
-          FIREBASE_JSON: ${{ secrets.FCM_SECRET }}
-        shell: bash
-
       - name: Docker build
         run: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
@@ -60,6 +51,11 @@ jobs:
             
             sudo touch .env
             echo "${{ secrets.ENV }}" | sudo tee .env > /dev/null
+            
+            cd Infra/src/main/resources
+            sudo touch popcornmate-d7ca1-firebase-adminsdk-svbpw-fce737e873.json
+            echo -ne "${{ secrets.FCM_SECRET }}" | sudo tee popcornmate-d7ca1-firebase-adminsdk-svbpw-fce737e873.json > /dev/null
+
 
             docker stop $(docker ps -a -q)
             docker rm $(docker ps -a -q)
