--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,6 +31,15 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
 
+      - name: 환경 변수를 세팅합니다.
+        run: |
+          cd ./Infra/src/main/resources
+          sudo touch ./popcornmate-d7ca1-firebase-adminsdk-svbpw-fce737e873.json
+          echo "$FIREBASE_JSON" > ./popcornmate-d7ca1-firebase-adminsdk-svbpw-fce737e873.json
+          sed -i 's/#/"/g' ./popcornmate-d7ca1-firebase-adminsdk-svbpw-fce737e873.json
+        env:
+          FIREBASE_JSON: ${{ secrets.FCM_SECRET }}
+
       - name: Build with Gradle
         run: ./gradlew :Api:build
 
