--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
           cd ./Infra/src/main/resources
           sudo touch ./popcornmate-d7ca1-firebase-adminsdk-svbpw-fce737e873.json
-          echo "$FIREBASE_JSON" > ./popcornmate-d7ca1-firebase-adminsdk-svbpw-fce737e873.json
+          echo "$FIREBASE_JSON" | sudo tee ./popcornmate-d7ca1-firebase-adminsdk-svbpw-fce737e873.json > /dev/null
           sed -i 's/#/"/g' ./popcornmate-d7ca1-firebase-adminsdk-svbpw-fce737e873.json
         env:
           FIREBASE_JSON: ${{ secrets.FCM_SECRET }}
