--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,6 +7,10 @@ server {
 
     error_log /var/log/nginx/error.log;
 
+    http {
+        client_max_body_size 5M;
+    }
+
     location /api {
         proxy_pass http://server:8080;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
