--- a/Api/src/main/resources/application.yml
+++ b/Api/src/main/resources/application.yml
@@ -14,6 +14,7 @@ spring:
       matching-strategy: ant_path_matcher
   servlet:
     multipart:
+      enabled: true
       max-file-size: 5MB
       max-request-size: 5MB
 
