--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ out/
 
 Domain/src/main/generated/**/*.java
 Infra/src/main/resources/popcornmate-d7ca1-firebase-adminsdk-svbpw-343677f710.json
+
+Api/src/test/*
+Domain/src/test/*
