feat: batch 초기 설정

--- a/Api/build.gradle
+++ b/Api/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     implementation project(':Domain')
     implementation project(':Core')
     implementation project(':Infra')
+    implementation project(':Batch')
 }
 
 test {
