--- a/Api/src/main/resources/application.yml
+++ b/Api/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
       - domain
       - core
       - infra
+      - batch
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
