feat/test setting

--- a/Api/build.gradle
+++ b/Api/build.gradle
@@ -12,7 +12,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-
+    testImplementation 'org.springframework.security:spring-security-test'
 
     // swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
