--- a/build.gradle
+++ b/build.gradle
@@ -35,10 +35,17 @@ subprojects {
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
 		testCompileOnly 'org.projectlombok:lombok'
 		testAnnotationProcessor 'org.projectlombok:lombok'
+		testImplementation "org.springframework.cloud:spring-cloud-contract-wiremock:4.1.1"
+		testRuntimeOnly 'com.h2database:h2'
 		/* fcm */
 		implementation 'com.google.firebase:firebase-admin:9.2.0'
 
 		implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+
+		implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+		implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
+		runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+		runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	}
 
 	repositories {
